applications/kubernetes/pihole/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingressroute
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`pihole.kube.eggenberg.io`)
    kind: Rule
    services:
    - name: pihole-web
      port: 80
  tls:
    secretName: pihole-certificate-secret
